--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Minh Hieu | Dev</title>
+<title>Ha Trong Lam</title>
 </head>
 <body>
 
-<h1>Thông Tin Cá Nhân</h1>
-<p>Tên: Minh Hiếu<br/>Năm Sinh: 22/10/2007<br/>Nơi ở: Hà Nội<br/>Sở Thích: Code Dạo</p>
+<h2>Thong Tin Ca Nhan</h2>
+<p>Ten: Ha Trong Lam<br/>Nam Sinh: 2011<br/>Noi o: Ha Noi</p>
 
 </body>
 </html>
